--- a/rr_lib/src/main/res/layout/activity_base.xml
+++ b/rr_lib/src/main/res/layout/activity_base.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.common.rr_lib.mvp.AbstractBaseActivity">
+    tools:context="com.common.rrlib.mvp.AbstractBaseActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
