--- a/rr_lib/src/main/res/layout/activity_demo.xml
+++ b/rr_lib/src/main/res/layout/activity_demo.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.common.rr_lib.test.DemoActivity">
+    tools:context="com.common.rrlib.test.DemoActivity">
 
 </android.support.constraint.ConstraintLayout>
