--- a/rr_lib/src/main/res/layout/content_base.xml
+++ b/rr_lib/src/main/res/layout/content_base.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.common.rr_lib.mvp.AbstractBaseActivity"
+    tools:context="com.common.rrlib.mvp.AbstractBaseActivity"
     tools:showIn="@layout/activity_base">
 
 </android.support.constraint.ConstraintLayout>
